name:               lambdacmsorg-page
version:            0.0.0
license:            MIT
license-file:       LICENSE
author:
maintainer:
copyright:          (c) 2015
bug-reports:
homepage:
synopsis:           LambdaCmsOrg Page
description:        Content Management System (CMS) Page Extension
stability:          alpha
category:           web
build-type:         Simple
cabal-version:      >= 1.18
tested-with:        GHC >= 7.6
extra-doc-files:    README.md
extra-source-files: templates/edit.hamlet
                  , templates/index.hamlet
                  , templates/new.hamlet
                  , config/models
                  , config/routes

source-repository head
  type:             git
  location:

library
  default-language: Haskell2010

  exposed-modules:  LambdaCmsOrg.Page
                  , LambdaCmsOrg.Page.Message

  other-modules:    LambdaCmsOrg.Page.Foundation
                  , LambdaCmsOrg.Page.Models
                  , LambdaCmsOrg.Page.PageType
                  , LambdaCmsOrg.Page.Import
                  , LambdaCmsOrg.Page.Handler.Page

  build-depends:    base
                  , yesod
                  , yesod-form
                  , lambdacms-core                >= 0.0.8      && < 0.1
                  , persistent
                  , persistent-template
                  , classy-prelude
                  , text
                  , yesod-text-markdown
                  , markdown
                  , time
                  , shakespeare
                  , wai

  ghc-options:      -Wall -O2
