name:               lambdacmsorg-page
version:            0.0.0
license:            MIT
license-file:       LICENSE
author:             Hoppinger BV
maintainer:         Cies Breijs
copyright:          (c) 2015
bug-reports:        https://github.com/lambdacms/lambdacms.org-page/issues
homepage:           http://lambdacms.org
synopsis:           Page extension
description:        Page extension for the lambdacms.org website
stability:          alpha
category:           web
build-type:         Simple
cabal-version:      >= 1.18
tested-with:        GHC >= 7.6
extra-doc-files:    README.md
extra-source-files: templates/edit.hamlet
                  , templates/index.hamlet
                  , templates/new.hamlet
                  , config/models
                  , config/routes

source-repository head
  type:             git
  location:

library
  default-language: Haskell2010

  exposed-modules:  LambdaCmsOrg.Page
                  , LambdaCmsOrg.Page.Message

  other-modules:    LambdaCmsOrg.Page.Foundation
                  , LambdaCmsOrg.Page.Models
                  , LambdaCmsOrg.Page.PageType
                  , LambdaCmsOrg.Page.Import
                  , LambdaCmsOrg.Page.Handler.Page

  build-depends:    base
                  , yesod
                  , yesod-form
                  , lambdacms-core                >= 0.2      && < 0.4
                  , persistent
                  , persistent-template
                  , classy-prelude
                  , text
                  , yesod-text-markdown
                  , markdown
                  , time
                  , shakespeare
                  , wai

  ghc-options:      -Wall -O2
