name:               lambdacmsorg-tutorial
version:            0.0.0
license:            MIT
license-file:       LICENSE
author:
maintainer:
copyright:          (c) 2015
bug-reports:
homepage:
synopsis:           LambdaCmsOrg Tutorial
description:        Content Management System (CMS) Tutorial Extension
stability:          alpha
category:           web
build-type:         Simple
cabal-version:      >= 1.18
tested-with:        GHC >= 7.6
extra-doc-files:    README.md
extra-source-files: templates/edit.hamlet
                  , templates/index.hamlet
                  , templates/new.hamlet
                  , config/models
                  , config/routes

source-repository head
  type:             git
  location:

library
  default-language: Haskell2010

  exposed-modules:  LambdaCmsOrg.Tutorial
                  , LambdaCmsOrg.Tutorial.Message

  other-modules:    LambdaCmsOrg.Tutorial.Foundation
                  , LambdaCmsOrg.Tutorial.Models
                  , LambdaCmsOrg.Tutorial.Import
                  , LambdaCmsOrg.Tutorial.Handler.Tutorial

  build-depends:    base
                  , yesod
                  , yesod-form
                  , lambdacms-core                >= 0.0.8      && < 0.1
                  , persistent
                  , text
                  , time
                  , shakespeare
                  , yesod-text-markdown
                  , markdown
                  , wai

  ghc-options:      -Wall -O2
